test(reservation): 예약 일괄취소 관련 테스트 수정